--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <main>
-    <code>https://push.mol.ink/text?text={xxxxx}</code>
+    <code>https://example.com/text?text={xxxxx}</code>
   </main>
 
   <footer>
